<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:autofillHints=""

        android:hint="@string/user_name"
        android:inputType=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="450dp"
        android:autofillHints=""
        android:hint="@string/e_mail"
        android:inputType=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/signup_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:text="@string/sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_Password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType=""
        android:password="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Deprecated,MissingConstraints,TextFields" />
    />

</androidx.constraintlayout.widget.ConstraintLayout>