<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/ic_launcher_background"
        android:contentDescription="@string/todo" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="250dp"
        android:hint="@string/user_name"
        android:id="@+id/login_username"
        android:inputType=""
        android:autofillHints="" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="550dp"
        android:id="@+id/login_login"
        android:text="@string/log_in" />

    <EditText
        android:id="@+id/login_Password"
        android:password="true"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:autofillHints=""
        android:hint="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Deprecated,MissingConstraints,TextFields"
        android:inputType="" />


</androidx.constraintlayout.widget.ConstraintLayout>