<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".originActivity">    <ImageView        android:layout_width="match_parent"        android:layout_height="match_parent"        android:contentDescription="@string/todo"        app:srcCompat="@drawable/ic_launcher_foreground"        tools:layout_editor_absoluteX="48dp"        tools:layout_editor_absoluteY="-54dp" />    <Button        android:id="@+id/chats"        android:layout_width="145dp"        android:layout_height="53dp"        android:layout_marginLeft="35dp"        android:background="#1D978C"        app:layout_constraintTop_toTopOf="parent"        android:layout_marginTop="200dp"        android:text="@string/chats"        app:layout_constraintLeft_toLeftOf="parent"        tools:ignore="MissingConstraints"        tools:layout_editor_absoluteY="197dp" />    <Button        android:id="@+id/privateChats"        android:layout_width="145dp"        app:layout_constraintTop_toTopOf="parent"        android:layout_marginTop="200dp"        android:layout_height="53dp"        android:layout_marginRight="35dp"        android:background="#1D978C"        android:text="@string/private_chat"        app:layout_constraintRight_toRightOf="parent"        tools:ignore="MissingConstraints"        tools:layout_editor_absoluteY="197dp" />    <Button        android:id="@+id/btn_setting"        android:layout_width="78dp"        android:layout_height="76dp"        android:layout_marginLeft="4dp"        android:layout_marginBottom="4dp"        android:foreground="@android:drawable/ic_menu_manage"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintLeft_toLeftOf="parent"        tools:ignore="SpeakableTextPresentCheck" /></androidx.constraintlayout.widget.ConstraintLayout>